monthly overflow fix

--- a/site/static/css/donate.css
+++ b/site/static/css/donate.css
@@ -31,7 +31,7 @@ body {
 
 #once-or-monthly p, #numbers p, #other input {
 	background-color: #3a77e0;
-	margin: 0px 10px;
+	margin: 10px;
 	font-size: 30px;
 	text-transform: uppercase;
 	font-weight: bold;
